--- a/css/home.css
+++ b/css/home.css
@@ -1440,3 +1440,121 @@ body {
 
 
 
+
+.stats { 
+  background-image: linear-gradient(to bottom, var(--white) 50%, var(--cultured) 50%); 
+  width: 100%;
+  display: flex;
+justify-content: center;
+align-items: center;
+  /* padding: 40px 2px; */
+}
+
+.stats-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  gap: 36px 24px;
+  padding: 45px 30px;
+  width: 100%;
+  border-radius: 2rem;
+}
+
+.stats-card .card-text > * { color: var(--white); }
+
+
+
+
+
+.has-bg-image {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.h11{
+  font-size: 80px; 
+}
+
+
+
+
+@media (min-width: 992px) {
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 960px;
+   }
+   
+
+
+
+
+  .stats-card { grid-template-columns: repeat(4, 1fr); }
+
+  .stats { 
+
+    padding: 40px 2px;
+  }
+  
+
+
+
+
+}
+
+@media (max-width: 600px) {
+.h11{
+  font-size: 40px;
+}
+}
+
+/*-----------------------------------*\
+  #SERVICE
+\*-----------------------------------*/
+
+.service { text-align: center; }
+
+.service .section-title { margin-block-end: 50px; }
+
+.service-card {
+  padding: 10px;
+  box-shadow: var(--shadow-2);
+  border-radius: var(--radius-6);
+}
+
+.service-card .card-icon {
+  width: 60px;
+  height: 60px;
+  background-color: var(--violet-blue-crayola);
+  display: grid;
+  place-items: center;
+  color: var(--white);
+  font-size: 2.5rem;
+  border-radius: var(--radius-circle);
+  margin-inline: auto;
+}
+
+.service-card .card-icon ion-icon { --ionicon-stroke-width: 50px; }
+
+.service-card .card-title { margin-block: 16px 10px; }
+
+.service-card .btn-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  margin-block-start: 10px;
+  color: var(--violet-blue-crayola);
+  font-weight: var(--fw-700);
+  transition: var(--transition-1);
+}
+
+.service-card .btn-text:is(:hover, :focus-visible) { opacity: 0.9; }
+
+
+@media (min-width: 1200px) {
+  .service .grid-list { grid-template-columns: repeat(4, 1fr); }
+}
